2da preentrega react

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -10,7 +10,7 @@
 
 .buttonStyle {
     border-radius: 15px;
-    background-color: magenta;
+    background-color: green;
     border-style: solid 2px black;
     margin: 10px;
     width: 150px;
