2da preentrega react diego de leon

--- a/src/components/ItemDetail/ItemDetail.module.css
+++ b/src/components/ItemDetail/ItemDetail.module.css
@@ -9,6 +9,7 @@
     background-color: green;
     border-radius: 25px 25px 0 0;
     height: 100px;
+    margin-top: 20px;
     align-items: center;
     justify-content: center;
 }
